@@ -161,6 +161,11 @@ Core and Builtins
 Library
 -------
 
+- Issue #8796: codecs.open() calls the builtin open() function instead of using
+  StreamReaderWriter. Deprecate StreamReader, StreamWriter, StreamReaderWriter,
+  StreamRecoder and EncodedFile() of the codec module. Use the builtin open()
+  function or io.TextIOWrapper instead.
+
 - Issue #12175: BufferedReader.read(-1) now calls raw.readall() if available.
 
 - Issue #12175: FileIO.readall() now only reads the file position and size
